ch8/8.6/0-1-net-tools-ifn-default.yaml
apiVersion: v1
kind: Pod
metadata:
  name: net
spec:
  containers:
  - image: sysnet4admin/net-tools-ifn
    name: net
