ch8/8.6/2-1-deploy-podSelector-int-only.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: internal 
    app: chk-info
  name: deploy-podSelector-int-only   
spec:
  replicas: 3
  selector:
    matchLabels:
      role: internal 
      app: chk-info
  template:
    metadata:
      labels:
        role: internal 
        app: chk-info
    spec:
      containers:
      - image: sysnet4admin/chk-info
        name: chk-info
