ch8/8.6/3-1-deploy-ipBlock.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chk-info
  name: deploy-ipblock   
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chk-info
  template:
    metadata:
      labels:
        app: chk-info
    spec:
      containers:
      - image: sysnet4admin/chk-info
        name: chk-info
