ch8/8.6/4-1-deploy-namespaceselector-dev2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chk-info
  name: deploy-namespaceselector-dev2
  namespace: dev2  
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chk-info
  template:
    metadata:
      labels:
        app: chk-info
    spec:
      containers:
      - image: sysnet4admin/chk-info
        name: chk-info
