ch8/8.6/1-1-deploy-deny-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: sensitive  
    app: chk-info
  name: deploy-deny-all
spec:
  replicas: 3
  selector:
    matchLabels:
      role: sensitive  
      app: chk-info
  template:
    metadata:
      labels:
        role: sensitive  
        app: chk-info
    spec:
      containers:
      - image: sysnet4admin/chk-info
        name: chk-info
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chk-info
  name: deploy-deny-all
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: chk-info
  type: LoadBalancer
