ch8/8.6/NetworkPolicy-team-dev2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-dev2
  namespace: dev2
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress 
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dev2
  egress:
  - {}
